Regression: The dot in the middle of the sculpt cursor doesn't properly snap to the nearest vertex #99779

Closed
opened 2022-07-16 21:43:17 +02:00 by Tolkfan · 6 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1650 Super

Blender Version
Broken: 3.2.1 and 3.3
Worked: 3.2

Short description of error

Here's a video, watch the dot in the middle of the cursor. This only happens to me when there's a multires modifier on the object.

SculptCursor.mp4

Exact steps for others to reproduce the error

  • add a multires modifier to the default cube and subdivide it a few times
  • enable wireframe to see the problem better
  • go into sculpt mode
  • run the cursor along the surface and see the little dot go crazy
**System Information** Operating system: Windows 10 Graphics card: GTX 1650 Super **Blender Version** Broken: 3.2.1 and 3.3 Worked: 3.2 **Short description of error** Here's a video, watch the dot in the middle of the cursor. This only happens to me when there's a multires modifier on the object. [SculptCursor.mp4](https://archive.blender.org/developer/F13296524/SculptCursor.mp4) **Exact steps for others to reproduce the error** - add a multires modifier to the default cube and subdivide it a few times - enable wireframe to see the problem better - go into sculpt mode - run the cursor along the surface and see the little dot go crazy

Added subscriber: @Tolkfan

Added subscriber: @Tolkfan
Collaborator

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Omar Emara changed title from The dot in the middle of the sculpt cursor doesn't properly snap to the nearest vert to Regression: The dot in the middle of the sculpt cursor doesn't properly snap to the nearest vertex 2022-07-17 18:35:10 +02:00

Added subscribers: @JosephEagar, @ThomasDinges

Added subscribers: @JosephEagar, @ThomasDinges

There will be a 3.2.2, so would be great to have this fixed until the beginning of August. @JosephEagar Can you please take a look?

There will be a 3.2.2, so would be great to have this fixed until the beginning of August. @JosephEagar Can you please take a look?

This issue was referenced by 462f99bf38

This issue was referenced by 462f99bf38648a08226b1fba423315aec2bc577b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-07-25 20:54:05 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99779
There is no content yet.