Sculpt: Fix T99779, pbvh gets wrong active vertex for multires

The recent multires winding fix missed a code branch.